Refactoring: rewrite SchemaDiffTest using JUnit5