@@ -4,13 +4,18 @@ import org.everit.json.schema.Schema;
 import org.everit.json.schema.loader.SchemaLoader;
 import org.json.JSONArray;
 import org.json.JSONObject;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.zalando.nakadi.domain.SchemaChange;
 import org.zalando.nakadi.validation.schema.diff.SchemaDiff;
 
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Stream;
 
 import static java.util.stream.Collectors.toList;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -21,33 +26,51 @@ import static org.zalando.nakadi.utils.TestUtils.readFile;
 public class SchemaDiffTest {
     private SchemaDiff service;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         this.service = new SchemaDiff();
     }
 
-    @Test
-    public void checkJsonSchemaCompatibility() throws Exception {
-        final JSONArray testCases = new JSONArray(
-                readFile("invalid-schema-evolution-examples.json"));
+    @ParameterizedTest
+    @MethodSource("getInvalidChanges")
+    public void checkJsonSchemaCompatibility(
+            final String description,
+            final Schema original,
+            final Schema update,
+            final List<String> errorMessages) {
+        assertThat(description,
+                service.collectChanges(original, update).stream()
+                        .map(change -> change.getType().toString() + " " + change.getJsonPath())
+                        .collect(toList()),
+                is(errorMessages));
+    }
 
+    static Stream<Arguments> getInvalidChanges() throws IOException {
+        return loadTestExamples("schema-evolution-examples.invalid.json", true);
+    }
+
+    static Stream<Arguments> loadTestExamples(final String filename, final boolean withErrors) throws IOException {
+        final JSONArray testCases = new JSONArray(readFile(filename));
+
+        ArrayList<Arguments> tests = new ArrayList<>();
         for (final Object testCaseObject : testCases) {
             final JSONObject testCase = (JSONObject) testCaseObject;
+            final String description = testCase.getString("description");
             final Schema original = SchemaLoader.load(testCase.getJSONObject("original_schema"));
             final Schema update = SchemaLoader.load(testCase.getJSONObject("update_schema"));
-            final List<String> errorMessages = testCase
-                    .getJSONArray("errors")
-                    .toList()
-                    .stream()
-                    .map(Object::toString)
-                    .collect(toList());
-            final String description = testCase.getString("description");
-
-            assertThat(description, service.collectChanges(original, update).stream()
-                    .map(change -> change.getType().toString() + " " + change.getJsonPath())
-                    .collect(toList()), is(errorMessages));
-
+            if (withErrors) {
+                final List<String> errorMessages = testCase
+                        .getJSONArray("errors")
+                        .toList()
+                        .stream()
+                        .map(Object::toString)
+                        .collect(toList());
+                tests.add(Arguments.of(description, original, update, errorMessages));
+            } else {
+                tests.add(Arguments.of(description, original, update));
+            }
         }
+        return tests.stream();
     }
 
     @Test
